--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+node_modules
+img/canstockphoto3392789.jpg
+img/alligator.psd
